<resources>
    <string name="app_name" translatable="false">EncryShare</string>
    <string name="chats_loading">Обновление списка чатов...</string>
    <string name="apiUrl" translatable="false">http://otdelenietrois.online/api/</string>
    <string name="versionUrl" translatable="false">https://alexc-ux.github.io/EncryShareWebsite/</string>
    <string name="devSiteUrl" translatable="false">https://alexc-ux.github.io/EncryShareWebsite/</string>
    <string name="loginHintRU">Введите логин…</string>
    <string name="passwordHintRU">Введите пароль…</string>
    <string name="regBtnRU">Зарегистрироваться</string>
    <string name="wrongRegFieldsRU">Длинна имени/логина/пароля должна быть больше, чем 4 символа!</string>
    <string name="loadingRU">Загрузка…</string>
    <string name="userid" translatable="false">id</string>
    <string name="username" translatable="false">name</string>
    <string name="arrowRight1" translatable="false">ᗒ</string>
    <string name="arrowRight2" translatable="false">➤</string>
    <string name="new_message">Введите текст…</string>
    <string name="welcometext">Добро пожаловать,</string>
    <string name="yourid">Ваш ID:</string>
    <string name="pressidtocopy">(нажмите на ID чтобы скопировать)</string>
    <string name="share">Поделиться</string>
    <string name="createchat">Создать чат</string>
    <string name="enterchatname">Введите название чата…</string>
    <string name="menu">МЕНЮ</string>
    <string name="chat_name" translatable="false">Chat name</string>
    <string name="addmember">Добавить пользователя</string>
    <string name="enterid">Введите ID…</string>
    <string name="removemember">Удалить пользователя</string>
    <string name="leavechat">Покинуть чат</string>
    <string name="members">Пользователи</string>
    <string name="updateTitle">Доступно обновление!</string>
    <string name="updateText">Нажмите для перехода на сайт разработчика</string>
    <string name="nameHintRU">Введите имя…</string>
    <string name="copyingbypressingid">(по нажатию скопируется ID пользователя)</string>
    <string name="language" translatable="false">Language</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="copy">Скопировать</string>
    <string name="reply">Ответить</string>
    <string name="arrow_reply_down" translatable="false">⮩</string>
    <string name="arrow_reply_up" translatable="false">⮪</string>
    <string name="theme">Тема</string>
    <string name="dark">Тёмная</string>
    <string name="light">Светлая</string>
    <string name="systemtheme">Системная</string>
    <string name="english" translatable="false">English</string>
    <string name="author">Автор</string>
    <string name="vk" translatable="false">VKontakte</string>
    <string name="github" translatable="false">Github</string>
    <string name="author_name">Герасимов Александр Андреевич</string>
    <string name="author_vk" translatable="false">https://vk.com/id361675873</string>
    <string name="author_github" translatable="false">https://github.com/AlexC-ux</string>
    <string name="siomaname">Данилов Семён Алексеевич</string>
    <string name="thanks_to">Отдельной благодарности заслуживает:</string>
    <string name="vlads23" translatable="false">VladS23</string>
    <string name="rimuru" translatable="false">Rimuru</string>
    <string name="sycho" translatable="false">Sycho</string>
</resources>