<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".chatWindow"
    android:background="@color/bg_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:background="@color/bg_main">

        <ImageButton
            android:id="@+id/exitBtn"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="5sp"
            android:layout_marginBottom="5sp"
            android:background="@drawable/exit"
            android:contentDescription="@string/app_name"
            android:foregroundGravity="center"
            android:rotation="180"
            android:visibility="visible" />

        <TextView
            android:id="@+id/authorgithub"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="60sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:text="@string/app_name"
            android:textColor="@color/text"
            android:textSize="30sp" />


    </RelativeLayout>


    <ScrollView
        android:id="@+id/scrollChatMessages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="0dp"
        android:background="@color/bg_messages">

        <LinearLayout
            android:id="@+id/chatMessages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/author"
                android:textSize="14pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/author_name"
                android:textSize="10pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/vk"
                android:textSize="14pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:text="@string/author_vk"
                android:textSize="10pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/github"
                android:textSize="14pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:text="@string/author_github"
                android:textSize="10pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30sp"
                android:text="@string/thanks_to"
                android:textSize="12pt" />

            <TextView
                android:id="@+id/siomavk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20sp"
                android:text="@string/siomaname"
                android:textSize="10pt" />



            <TextView
                android:id="@+id/vlads23"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20sp"
                android:text="@string/vlads23"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/rimuru"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20sp"
                android:text="@string/rimuru"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/sycho"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20sp"
                android:text="@string/sycho"
                android:textSize="10pt" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>