<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".chatWindow"
    android:background="@color/bg_main">


    <Button
        android:id="@+id/inchatMenuBtn"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="5sp"
        android:background="@drawable/chatbg"
        android:paddingBottom="3sp"
        android:text="@string/menu"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/chat_name"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60sp"
        android:background="@color/bg_main"
        android:paddingBottom="5sp"
        android:text="@string/chat_name"
        android:textAlignment="center"
        android:textSize="10pt" />

    <ScrollView
        android:id="@+id/scrollChatMessages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="90sp"
        android:layout_marginBottom="80sp">

        <LinearLayout
            android:id="@+id/chatMessages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15sp"
            android:orientation="vertical">


        </LinearLayout>
    </ScrollView>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_height="80sp">
    <EditText
        android:maxLength="1024"
        android:id="@+id/newMsgText"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:layout_alignParentBottom="true"
        android:layout_weight="8"
        android:hint="@string/new_message"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <ImageButton
        android:id="@+id/sendMsgBtn"
        android:layout_width="70sp"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10sp"
        android:layout_weight="2"
        android:background="@drawable/chatbg"/>
</LinearLayout>


    <LinearLayout
        android:layout_marginHorizontal="8sp"
        android:id="@+id/chatMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_main"
        android:clickable="true"
        android:orientation="vertical"
        android:visibility="gone"
        android:weightSum="100">


        <Button
            android:id="@+id/addMemberBtn"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="100sp"

            android:background="@drawable/chatbg"
            android:text="@string/addmember" />

        <EditText
            android:id="@+id/addMemberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterid"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHighlight="@color/grey1"
            android:textColorHint="@color/white"
            android:textColorLink="@color/grey1"
            android:visibility="gone" />

        <Button
            android:id="@+id/removeMemberBtn"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="15sp"
            android:background="@drawable/chatbg"
            android:text="@string/removemember" />

        <EditText
            android:id="@+id/removeMemberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHighlight="@color/grey1"
            android:textColorHint="@color/white"
            android:textColorLink="@color/grey1"
            android:hint="@string/enterid"
            android:visibility="gone" />

        <Button
            android:id="@+id/exitChatBtn"
            android:layout_width="match_parent"
            android:layout_marginTop="15sp"
            android:layout_height="60sp"
            android:background="@drawable/chatbg"
            android:text="@string/leavechat" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/members"
            android:textAlignment="center"
            android:textSize="18pt" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/copyingbypressingid"
            android:textAlignment="center"
            android:textSize="7pt" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:clickable="false"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/chatMembersLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>