<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loggedWindow">






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="00sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/leftMenuPanel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="0"
                android:background="@color/bg_menu1"

                android:choiceMode="none"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone">

                <TextView
                    android:textColor="@color/text"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="50sp"
                    android:text="@string/welcometext"
                    android:textAlignment="center"
                    android:textSize="10pt" />

                <TextView
                    android:textColor="@color/text"
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="80sp"
                    android:text="@string/username"
                    android:textAlignment="center"
                    android:textSize="10pt" />

                <TextView
                    android:textColor="@color/text"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="130sp"
                    android:text="@string/yourid"
                    android:textAlignment="center"
                    android:textSize="10pt" />

                <TextView
                    android:textColor="@color/text"
                    android:id="@+id/userid"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="160sp"
                    android:text="@string/userid"
                    android:textAlignment="center"
                    android:textSize="10pt" />

                <TextView
                    android:textColor="@color/text"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="185sp"
                    android:text="@string/pressidtocopy"
                    android:textAlignment="center"
                    android:textSize="9pt" />
                <Button
                    android:id="@+id/share"
                    android:layout_marginHorizontal="90sp"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="270sp"
                    android:background="@drawable/chatbg"
                    android:text="@string/share"
                    android:textSize="16dp"
                    android:outlineProvider="background"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/langBtn"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_alignParentTop="true"
                    android:layout_marginHorizontal="90sp"
                    android:layout_marginTop="225sp"
                    android:background="@drawable/chatbg"
                    android:outlineProvider="background"
                    android:text="@string/language"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/newChat"
                    android:layout_width="match_parent"
                    android:layout_height="70sp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginHorizontal="10sp"
                    android:layout_marginBottom="90sp"
                    android:background="@drawable/chatbg"
                    android:outlineProvider="background"
                    android:text="@string/createchat"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/newChatName"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginHorizontal="10sp"
                    android:layout_marginBottom="30sp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/enterchatname"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/grey1"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/grey1"
                    android:visibility="gone" />


            </RelativeLayout>

            <ScrollView

                android:id="@+id/scrollChats"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="@color/bg_scroll"
                android:visibility="visible">

                <LinearLayout

                    android:id="@+id/allChatsPanel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60sp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/chats_preloader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/chats_loading"
                        android:layout_margin="5sp"
                        android:textColor="@color/text"
                        android:textSize="28sp"/>
                </LinearLayout>

            </ScrollView>


        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:background="@color/bg_main">

        <ImageButton

            android:id="@+id/menuBtn"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_margin="5sp"
            android:background="@drawable/ic_buter_2pt"
            android:contentDescription="@string/app_name"
            android:foregroundGravity="center"
            android:visibility="visible" />

        <TextView
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginLeft="60sp"
            android:textColor="@color/text"
            android:text="@string/app_name"
            android:textSize="30sp" />
    </RelativeLayout>

</RelativeLayout>
